AC_INIT([Moka ], 5.3, [sam@snwh.org], [Moka], [http://snwh.org/moka])
AM_INIT_AUTOMAKE([-Wno-portability no-dist-gzip dist-xz foreign subdir-objects 1.9 tar-ustar])
AC_PREFIX_DEFAULT(/usr/local)
AM_SILENT_RULES([yes])


AC_CONFIG_FILES([Makefile])
AC_OUTPUT

AC_MSG_RESULT([
        Moka icon theme $VERSION
        ========

        prefix:                 ${prefix}
        exec_prefix:            ${exec_prefix}
        datarootdir:            ${datarootdir}

])
